# simple-cms

server/: Cargo.toml  build.rs
server/data/: schema.sql
server/src/: cli.rs  main.rs  post.rs  util.rs
server/src/context/: db.rs  mod.rs  util.rs
