[package]
name = "server"
version = "0.0.0"
edition = "2021"
publish = false

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4.5.8", features = ["derive"] }
clap_complete = "4.5.7"
jwalk = "0.8.1"
md-5 = "0.10.6"
rayon = "1.10.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
